--- a/package.json
+++ b/package.json
@@ -1,11 +1,10 @@
 {
   "name": "moviy",
   "version": "1.0.0",
-  "main": "index.js",
   "scripts": {
     "start": "concurrently \"npm run start:frontend\" \"npm run start:backend\"",
     "start:frontend": "cd frontend && npm run dev",
-    "start:backend": "cd backend && nodemon index.js"
+    "start:backend": "cd backend && nodemon server.js"
   },
   "keywords": [],
   "author": "",
